force-app/main/default/objects/Movie__c/fields/BackdropUrl__c.field-meta.xml
<CustomField>
    <fullName>BackdropUrl__c</fullName>
    <label>Backdrop Url</label>
    <type>Url</type>
</CustomField>