force-app/main/default/objects/Movie__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Text</type>
    <length>10</length>
</CustomField>