force-app/main/default/objects/Movie__c/fields/ExternalSource__c.field-meta.xml
<CustomField>
    <fullName>ExternalSource__c</fullName>
    <label>External Source</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMDB</fullName>
                <default>true</default>
                <label>TMDB</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>