force-app/main/default/objects/Movie__c/fields/IMDB_Url__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Url__c</fullName>
    <label>IMDB Url</label>
    <type>Url</type>
</CustomField>