force-app/main/default/objects/Movie__c/fields/OriginalLanguage__c.field-meta.xml
<CustomField>
    <fullName>OriginalLanguage__c</fullName>
    <label>Original Language</label>
    <type>Text</type>
    <length>10</length>
</CustomField>