force-app/main/default/objects/Movie__c/fields/OriginalTitle__c.field-meta.xml
<CustomField>
    <fullName>OriginalTitle__c</fullName>
    <label>Original Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>