force-app/main/default/objects/Movie__c/fields/Popularity__c.field-meta.xml
<CustomField>
    <fullName>Popularity__c</fullName>
    <label>Popularity</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>