force-app/main/default/objects/Movie__c/fields/PosterUrl__c.field-meta.xml
<CustomField>
    <fullName>PosterUrl__c</fullName>
    <label>Poster Url</label>
    <type>Url</type>
</CustomField>