force-app/main/default/objects/Movie__c/fields/ReleaseYear__c.field-meta.xml
<CustomField>
    <fullName>ReleaseYear__c</fullName>
    <label>Release Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <formula>YEAR(ReleaseDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>