force-app/main/default/objects/Movie__c/fields/RuntimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>RuntimeMinutes__c</fullName>
    <label>Runtime Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>