force-app/main/default/objects/Movie__c/fields/VoteAverage__c.field-meta.xml
<CustomField>
    <fullName>VoteAverage__c</fullName>
    <label>Vote Average</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>