force-app/main/default/objects/Movie__c/fields/VoteCount__c.field-meta.xml
<CustomField>
    <fullName>VoteCount__c</fullName>
    <label>Vote Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>